--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
   --primary-color: #67BA43;
   --app-background:#F5F5F5;
-  --borderWidth: 3;
+
 
 }
 
@@ -19,6 +19,12 @@
   background-attachment: fixed;
   background-color: #f5f5f5;
   height: max-content;
-  width: 100vw;
+  display: grid;
+  overflow: hidden;
   
 } 
+
+.app-footer {
+  background-color: black;
+  height: 20vh;
+}
