--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -11,6 +11,10 @@
 
         .top-edge-typography {
         border-bottom: 5px solid black;
+        // background-color: aquamarine;
+        width: 98.56vw;
+        padding: 0;
+        margin: 0;
         display: flex;
         justify-content:space-between;
         font-weight: bold;  
@@ -32,7 +36,7 @@
 
             .top-nametag-box {
                 border-left: 5px solid black;
-                max-width:25vw;
+                
                 
                 
                 .name-tag {
@@ -107,8 +111,10 @@
 
             .hero-right {
                 height: 91.5vh;
-                width: 40vw;
+                width: 38.2vw;
                 justify-content: center;
+                overflow: hidden;
+                // background-color: red;
 
                 .monitor-container {
                     height: 80%;
@@ -127,20 +133,27 @@
                     font-weight: bold;  
                     
                     .cta-hero-right {
+
                         margin: auto;
+
                         background-color: var(--primary-color);
                         border:1px white solid;
+
                         width:40%;
                         height: 30%;
+
                         color: white;
                         font-family:Michroma;
+
                         font-size: 1.5em;
                         letter-spacing: .15em;
+
                         text-transform: uppercase;
-                        box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5) ;
+                        box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
                     }
                     .cta-hero-right-subtext {
-                        font-size: 1.2em;
+                        font-size: 1.4em;
+                        letter-spacing: .15em;
                     }
                 }
                 
