--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -2,16 +2,19 @@
 
 .hero-container {
      height: 100vh;
+     min-height: 750px;
      border: 5px solid black; 
      color: var(--primary-color);
      font-family: Michroma;
      display: grid;
+     margin: 0;
+     padding: 0;
      
 
 
         .top-edge-typography {
         border-bottom: 5px solid black;
-        // background-color: aquamarine;
+        
         width: 98.56vw;
         padding: 0;
         margin: 0;
@@ -20,28 +23,33 @@
         font-weight: bold;  
         font-size: 1.1em;
         letter-spacing: .15em;
-        height: 8vh;
-        margin: 0;    
+        height: 5vh;
+        min-height: 42.2px;  
 
 
             .top-quotebox {
-                
-                // width: 80vw;
+                margin:auto;
                 padding-right: 1vw;
+                height: 100%;
+
                 .quote-tag {
+                    margin: 1% 0 0 0;
                     text-align: center;
                     
                 }
             }
 
             .top-nametag-box {
+                
                 border-left: 5px solid black;
                 
                 
                 
                 .name-tag {
+                    width: 20vw;
                     text-align: center;
-                    margin: 1vw 2vw auto 2vw;
+                    margin: 3% 0 0 0;
+                    
                     
                 }
             }
@@ -49,16 +57,20 @@
 
         .heroContent {
             display: flex;
+            min-height: 718px;
         
 
             .hero-left {
                 // background-color: aqua;
-                height: 91.5vh;
+                height: 94.5vh;
+                min-height: 700px;
+                max-height: 705px;
                 width: 60vw;
                 border-right: 5px solid black;
                 
                 .hero-left-top {
                     height: 65%;
+                    min-height: 425.5px;
 
                     .hero-name {
                         margin: 5vh 0 5vh 0;
@@ -84,23 +96,36 @@
                 }
 
                 .hero-left-bottom {
-                    height: 18vh;
-                    padding: 2vw;
-                    
+                    min-height: 150px;
+                    max-height: 200px;
                     border-top: 5px black solid;
                     display: flex;
-                    justify-content: space-between;
+                    justify-content: space-around;
                     // background-color: purple;
                     
+                    .node-img {
+                        min-height: 131px;
+                        height:20vh;
+                        max-height:172px;
+                        margin: auto auto;
+                        
+                    }
                     .react-img {
-                        width: 14vw;
-                        height: 14vw;
-                        margin: -3vw;
+                        min-height: 200px;
+                        min-width: 200px;
+                        width: 12vw;
+                        height: 12vw;
+                        max-width: 200px;
+                        max-height:200px;
+                        margin: auto auto;
                     }
                     .aws-img {
-                        width:20vw;
+                        min-height: 205px;
+                        min-width:308px;
                         height:15vw;
-                        margin: -2.5vw;
+                        max-height:205px;
+                        max-width: 308px;
+                        margin: auto auto;
                         padding: 0;
                     }
                 }
@@ -110,22 +135,30 @@
             }
 
             .hero-right {
-                height: 91.5vh;
+                height: 94.5vh;
+                min-height: 691px;
                 width: 38.2vw;
+                display: flex;
+                flex-direction: column;
                 justify-content: center;
                 overflow: hidden;
                 // background-color: red;
 
                 .monitor-container {
-                    height: 80%;
+                    height: 65%;
+                    width: 100%;
                     padding:0;
-                    margin:-4.5vh;
+                    overflow: hidden;
+                    margin: auto;
+                    // margin: -60px 0 0 0;
                     img {
                         width: 100%;
+                        height: 100%;
                     }
                 }
                 .hero-right-button-container {
                     height: 30%;
+                    min-height: 228px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -134,7 +167,7 @@
                     
                     .cta-hero-right {
 
-                        margin: auto;
+                        margin: 0 auto 10% auto;
 
                         background-color: var(--primary-color);
                         border:1px white solid;
